clusters/overlay/default/stack/gateway-eg.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    cert-manager.io/private-key-algorithm: ECDSA
    cert-manager.io/private-key-rotation-policy: Always
    external-dns.alpha.kubernetes.io/target: 172.20.24.10,fd00:ebee:172:2024::10
  name: eg
  namespace: watcher
spec:
  gatewayClassName: eg
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      hostname: '*.bikeshed.dev'
      name: http
      port: 80
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      hostname: '*.bikeshed.dev'
      name: https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - name: wildcard-bikeshed-dev-tls
