clusters/overlay/default/stack/gateway-istio.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    cert-manager.io/private-key-algorithm: ECDSA
    cert-manager.io/private-key-rotation-policy: Always
    networking.istio.io/service-type: ${GATEWAY_SERVICE_TYPE:=NodePort}
  name: istio
  namespace: watcher
spec:
  gatewayClassName: istio
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      hostname: '*.bikeshed.dev'
      name: http
      port: 80
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      hostname: '*.bikeshed.dev'
      name: https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - name: wildcard-bikeshed-dev-tls
