clusters/overlay/default/stack/http-route-dex.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dex
  namespace: dex
spec:
  hostnames:
    - auth.bikeshed.dev
  parentRefs:
    - name: istio
      namespace: watcher
  rules:
    - backendRefs:
        - name: dex
          port: 5556
      matches:
        - path:
            type: PathPrefix
            value: /dex/
