clusters/overlay/default/stack/http-route-grafana.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: kube-prometheus-stack
spec:
  hostnames:
    - grafana.bikeshed.dev
  parentRefs:
    - name: istio
      namespace: watcher
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
