clusters/overlay/default/stack/http-route-prometheus.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: kube-prometheus-stack
spec:
  hostnames:
    - prometheus.bikeshed.dev
  parentRefs:
    - name: istio
      namespace: watcher
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
